Omit fake control sequences from the index
It makes no sense to index "\cs_new_..." for instance

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -147,7 +147,7 @@
 % Declaring a function before setting up the code means that the name
 % chosen will be checked and an error raised if it is already in use.
 % The name of a function can be checked at the point of definition using
-% the \cs{cs_new\ldots} functions: this is recommended for all
+% the \cs[no-index]{cs_new\ldots} functions: this is recommended for all
 % functions which are defined for the first time.
 %
 % There are three ways to define new functions.
@@ -1306,7 +1306,7 @@
 % These will be defined as needed in the appropriate modules, but
 % do a few now, just to get started.\footnote{This renaming gets expensive
 % in terms of csname usage, an alternative scheme would be to just use
-% the \cs{tex\ldots:D} name in the cases where no good alternative exists.}
+% the \cs[no-index]{tex_\ldots:D} name in the cases where no good alternative exists.}
 %
 % \begin{macro}[EXP]
 %   {
@@ -2255,7 +2255,8 @@
 %   {\cs_if_exist_use:N, \cs_if_exist_use:c}
 % \begin{macro}[EXP,added=2011-10-10]
 %   {\cs_if_exist_use:N, \cs_if_exist_use:c}
-%   The \cs{cs_if_exist_use:\ldots{}} functions cannot be implemented
+%   The \cs[index=cs_if_exist_use:N]{cs_if_exist_use:\ldots{}}
+%   functions cannot be implemented
 %   as conditionals because the true branch must leave both the control
 %   sequence itself and the true code in the input stream.
 %   For the \texttt{c} variants, we are careful not to put the control
