--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -97,7 +97,8 @@
 %     \cs{box_clear_new:N} \meta{box}
 %   \end{syntax}
 %   Ensures that the \meta{box} exists globally by applying
-%   \cs{box_new:N} if necessary, then applies \cs{box_(g)clear:N} to leave
+%   \cs{box_new:N} if necessary, then applies
+%   \cs[index=box_clear:N]{box_(g)clear:N} to leave
 %   the \meta{box} empty.
 % \end{function}
 %
