--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -405,7 +405,7 @@
 %   \begin{syntax}
 %     \cs{ior_map_break:}
 %   \end{syntax}
-%   Used to terminate a \cs{ior_map_\ldots} function before all
+%   Used to terminate a \cs[no-index]{ior_map_\ldots} function before all
 %   lines from the \meta{stream} have been processed. This will
 %   normally take place within a conditional statement, for example
 %   \begin{verbatim}
@@ -418,7 +418,7 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a \cs{ior_map_\ldots} scenario will lead to low
+%   Use outside of a \cs[no-index]{ior_map_\ldots} scenario will lead to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
@@ -432,7 +432,7 @@
 %   \begin{syntax}
 %     \cs{ior_map_break:n} \Arg{tokens}
 %   \end{syntax}
-%   Used to terminate a \cs{ior_map_\ldots} function before all
+%   Used to terminate a \cs[no-index]{ior_map_\ldots} function before all
 %   lines in the \meta{stream} have been processed, inserting
 %   the \meta{tokens} after the mapping has ended. This will
 %   normally take place within a conditional statement, for example
@@ -446,7 +446,7 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a \cs{ior_map_\ldots} scenario will lead to low
+%   Use outside of a \cs[no-index]{ior_map_\ldots} scenario will lead to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
@@ -949,7 +949,8 @@
 % case. However, the process is more complex than this as there are some
 % situations where a single lower case character maps to a special form, for
 % example \texttt{ij} in Dutch which becomes \texttt{IJ}. As such,
-% \cs{tl_mixed_case:n(n)} implement a more sophisticated mapping which accounts
+% \cs[index=tl_mixed_case:n]{tl_mixed_case:n(n)}
+% implement a more sophisticated mapping which accounts
 % for this and for modifying accents on the first letter. Spaces at the start
 % of the \meta{tokens} are ignored when finding the first \enquote{letter} for
 % conversion.
