--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -193,7 +193,7 @@
 %   \end{syntax}
 %   Ensures that the \meta{fp~var} exists globally
 %   by applying \cs{fp_new:N} if necessary, then applies
-%   \cs{fp_(g)zero:N} to leave the \meta{fp~var} set to~$+0$.
+%   \cs[index=fp_zero:N]{fp_(g)zero:N} to leave the \meta{fp~var} set to~$+0$.
 % \end{function}
 %
 % \section{Setting floating point variables}
