--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -205,7 +205,8 @@
 %     \cs{int_zero_new:N} \meta{integer}
 %   \end{syntax}
 %   Ensures that the \meta{integer} exists globally by applying
-%   \cs{int_new:N} if necessary, then applies \cs{int_(g)zero:N} to leave
+%   \cs{int_new:N} if necessary, then applies
+%   \cs[index=int_zero:N]{int_(g)zero:N} to leave
 %   the \meta{integer} set to zero.
 % \end{function}
 %
@@ -949,7 +950,7 @@
 %     \cs{__prg_compare_error:}
 %     \cs{__prg_compare_error:Nw} \meta{token}
 %   \end{syntax}
-%   These are used within \cs{int_compare:n(TF)}, \cs{dim_compare:n(TF)}
+%   These are used within \cs{int_compare:nTF}, \cs{dim_compare:nTF}
 %   and so on to recover correctly if the \texttt{n}-type argument does not
 %   contain a properly-formed relation.
 % \end{function}
