--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -564,7 +564,7 @@
 % based on those also available in \LuaTeX{} or used in \pkg{expl3}.
 % In the case of the \pdfTeX{} primitives, we retain |pdf| at the start
 % of the names \emph{only} for directly PDF-related primitives, as
-% there are a lot of \pdfTeX{} primitives that start \cs{pdf\ldots} but
+% there are a lot of \pdfTeX{} primitives that start \cs[no-index]{pdf\ldots} but
 % are not related to PDF output. These ones related to PDF output or only
 % work in PDF mode.
 %    \begin{macrocode}
@@ -1130,7 +1130,7 @@
   \tex_let:D \tex_italiccorrection:D     \@@italiccorr
   \tex_let:D \tex_underline:D            \@@underline
 %    \end{macrocode}
-% Some tidying up is needed for \tn{(pdf)tracingfonts}. Newer \LuaTeX{} has
+% Some tidying up is needed for \tn[index=tracingfonts]{(pdf)tracingfonts}. Newer \LuaTeX{} has
 % this simply as \tn{tracingfonts}, but that will have been overwritten by
 % the \LaTeXe{} kernel. So any spurious definition has to be removed, then
 % the real version saved either from the \pdfTeX{} name or from \LuaTeX{}.
