l3doc: add "noTF" key for things like \int_case:nn(TF)
Sometimes one wants to simultaneously document \foo:nn and
\foo:nnTF (and \foo:nnF and \foo:nnT), but since function
environments cannot pleasantly be nested (at present) one
had to document them separately.  The new key "noTF" is
for such cases: it is similar to (and compatible with) "pTF".

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -743,25 +743,16 @@
 %   \end{verbatim}
 %   after two expansions of \cs{use:c}.
 %
-% \begin{function}[EXP,added = 2012-11-10]
+% \begin{function}[noTF, EXP, added = 2012-11-10]
 %   {\cs_if_exist_use:N, \cs_if_exist_use:c}
 %   \begin{syntax}
 %     \cs{cs_if_exist_use:N} \meta{control sequence}
-%   \end{syntax}
-%   Tests whether the \meta{control sequence} is currently defined
-%   (whether as a function or another control sequence type), and if it
-%   does inserts the  \meta{control sequence} into the input stream.
-% \end{function}
-%
-% \begin{function}[TF,EXP, added = 2012-11-10]
-%   {\cs_if_exist_use:N, \cs_if_exist_use:c}
-%   \begin{syntax}
 %     \cs{cs_if_exist_use:NTF} \meta{control sequence} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests whether the \meta{control sequence} is currently defined
 %   (whether as a function or another control sequence type), and if it
-%   does inserts the  \meta{control sequence} into the input stream followed
-%   by the \meta{true code}.
+%   is inserts the  \meta{control sequence} into the input stream followed
+%   by the \meta{true code}.  Otherwise the \meta{false code} is used.
 % \end{function}
 %
 % \begin{function}[EXP]{\cs:w, \cs_end:}
@@ -2251,9 +2242,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP,TF,added=2011-10-10]
-%   {\cs_if_exist_use:N, \cs_if_exist_use:c}
-% \begin{macro}[EXP,added=2011-10-10]
+% \begin{macro}[EXP,noTF,added=2011-10-10]
 %   {\cs_if_exist_use:N, \cs_if_exist_use:c}
 %   The \cs[index=cs_if_exist_use:N]{cs_if_exist_use:\ldots{}}
 %   functions cannot be implemented
@@ -2279,7 +2268,6 @@
 \cs_set:Npn \cs_if_exist_use:c #1
   { \cs_if_exist:cTF {#1} { \use:c {#1} } { } }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \subsection{Defining and checking (new) functions}
