--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -356,7 +356,7 @@
 %   \end{center}
 % \end{function}
 %
-% \begin{function}[added = 2013-07-24, EXP, TF]{\int_case:nn}
+% \begin{function}[added = 2013-07-24, EXP, noTF]{\int_case:nn}
 %   \begin{syntax}
 %     \cs{int_case:nnTF} \Arg{test integer expression} \\
 %     ~~|{| \\
@@ -1547,8 +1547,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP, TF]{\int_case:nn}
-% \begin{macro}[EXP]{\int_case:nn}
+% \begin{macro}[EXP, noTF]{\int_case:nn}
 % \begin{macro}[aux]{\@@_case:nnTF}
 % \begin{macro}[aux]{\@@_case:nw, \@@_case_end:nw}
 %   For integer cases, the first task to fully expand the check
@@ -1585,7 +1584,6 @@
   }
 \cs_new_eq:NN \@@_case_end:nw \__prg_case_end:nw
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
