l3doc: Make sure hyperlink destination always exists.

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2373,6 +2373,7 @@ Do not distribute a modified version of this file.
 \cs_new_protected:Npn \@@_typeset_functions:
   {
     \small\ttfamily
+    \HD@savedestfalse
     \HD@target
     \Hy@MakeCurrentHref { HD. \int_use:N \c@HD@hypercount }
     \begin{tabular} [t] { @{} l @{} >{\hspace{\tabcolsep}} r @{} }
