Add comment concerning \csstring (closes #311)
The consensus is to wait and see if LuaTeX's primitives
stick around.  Besides, as Joseph feared there is some
engine variation for the empty csname (LuaTeX's \csstring
does better than our \cs_to_str:N in my view).

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2093,6 +2093,10 @@
 \cs_set:Npn \__cs_to_str:w #1 \__cs_to_str:N
   { - \__int_value:w \fi: \exp_after:wN \c_zero }
 %    \end{macrocode}
+%   If speed is a concern we could use \tn{csstring} in \LuaTeX{}.  For
+%   the empty csname that primitive gives an empty result while the
+%   current \cs{cs_to_str:N} gives incorrect results in all engines
+%   (this is impossible to fix without huge performance hit).
 % \end{macro}
 % \end{macro}
 %
