Add comment on LuaTeX's \letcharcode (closes #312)
The primitive is experimental.  Even if it wasn't we wouldn't
gain much from using it since we would need the code for other
engines anyway.

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1363,6 +1363,7 @@
 %   }
 %   Four simple functions with very similar definitions, so set up using
 %   an auxiliary.
+%   These are similar to \LuaTeX{}'s \tn{letcharcode} primitive.
 %    \begin{macrocode}
 \group_begin:
   \char_set_catcode_active:N \^^@
