Tweak a conditional to avoid using \c_minus_one
Previously, \int_const:Nn \c_foo_int { error } ended up
(after some errors) setting \c_minus_one=0 (because this
constant is unavoidably a counter).  This can lead to
infinite loops and other crazyness.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1177,7 +1177,11 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \int_const:Nn #1#2
   {
-    \int_compare:nNnTF {#2} > \c_minus_one
+    \int_compare:nNnTF {#2} < \c_zero
+      {
+        \int_new:N #1
+        \int_gset:Nn #1 {#2}
+      }
       {
         \int_compare:nNnTF {#2} > \c__max_constdef_int
           {
@@ -1189,10 +1193,6 @@
             \tex_global:D \@@_constdef:Nw #1 =
               \@@_eval:w #2 \@@_eval_end:
           }
-      }
-      {
-        \int_new:N #1
-        \int_gset:Nn #1 {#2}
       }
   }
 \cs_generate_variant:Nn \int_const:Nn { c }
