Working on l3keys performance
This is step 2 of the job: revise parts of the \keys_define:nn mechanism.
The structure of keys themselves will change, and will show up here.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1241,7 +1241,7 @@
 \cs_new_protected:Npn \@@_define:nnn #1#2#3
   {
     \tl_set:Nx \l_@@_module_tl { \@@_remove_spaces:n {#2} }
-    \keyval_parse:NNn \@@_define_elt:n \@@_define_elt:nn {#3}
+    \keyval_parse:NNn \@@_define:n \@@_define:nn {#3}
     \tl_set:Nn \l_@@_module_tl {#1}
   }
 \cs_generate_variant:Nn \@@_define:nnn { o }
@@ -1249,33 +1249,33 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_define_elt:n}
-% \begin{macro}[int]{\@@_define_elt:nn}
-% \begin{macro}[aux]{\@@_define_elt_aux:nn}
+% \begin{macro}[int]{\@@_define:n}
+% \begin{macro}[int]{\@@_define:nn}
+% \begin{macro}[aux]{\@@_define_aux:nn}
 %   The outer functions here record whether a value was given and then
 %   converge on a common internal mechanism. There is first a search for
 %   a property in the current key name, then a check to make sure it is
 %   known before the code hands off to the next step.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_define_elt:n #1
+\cs_new_protected:Npn \@@_define:n #1
   {
     \bool_set_true:N \l_@@_no_value_bool
-    \@@_define_elt_aux:nn {#1} { }
+    \@@_define_aux:nn {#1} { }
   }
-\cs_new_protected:Npn \@@_define_elt:nn #1#2
+\cs_new_protected:Npn \@@_define:nn #1#2
   {
     \bool_set_false:N \l_@@_no_value_bool
-    \@@_define_elt_aux:nn {#1} {#2}
+    \@@_define_aux:nn {#1} {#2}
   }
-\cs_new_protected:Npn \@@_define_elt_aux:nn #1#2
+\cs_new_protected:Npn \@@_define_aux:nn #1#2
   {
     \@@_property_find:n {#1}
     \cs_if_exist:cTF { \c_@@_props_root_tl \l_@@_property_tl }
-      { \@@_define_key:n {#2} }
+      { \@@_define_code:n {#2} }
       {
-        \str_if_eq_x:nnF { \l_@@_property_tl } { .abort: }
-          {
-            \__msg_kernel_error:nnxx { kernel } { property-unknown }
+         \tl_if_empty:NF \l_@@_property_tl
+           {
+             \__msg_kernel_error:nnxx { kernel } { property-unknown }
               { \l_@@_property_tl } { \l_keys_path_tl }
            }
       }
@@ -1293,45 +1293,57 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_property_find:n #1
   {
-    \tl_set:Nx \l_keys_path_tl { \l_@@_module_tl / }
-    \tl_if_in:nnTF {#1} { . }
-      { \@@_property_find:w #1 \q_stop }
+    \tl_set:Nx \l_@@_property_tl { \@@_remove_spaces:n {#1} }
+    \exp_after:wN \@@_property_find:w \l_@@_property_tl . . \q_stop {#1}
+  }
+\cs_new_protected:Npn \@@_property_find:w #1 . #2 . #3 \q_stop #4
+  {
+    \tl_if_blank:nTF {#3}
       {
-        \__msg_kernel_error:nnx { kernel } { key-no-property } {#1}
-        \tl_set:Nn \l_@@_property_tl { .abort: }
+        \tl_clear:N \l_@@_property_tl
+        \__msg_kernel_error:nnn { kernel } { key-no-property } {#4}
+      }
+      {
+        \str_if_eq:nnTF {#3} { . }
+          {
+            \tl_set:Nx \l_keys_path_tl { \l_@@_module_tl / #1 }
+            \tl_set:Nn \l_@@_property_tl { . #2 }
+          }
+          {
+            \tl_set:Nx \l_keys_path_tl { \l_@@_module_tl / #1 . #2 }
+            \@@_property_search:w #3 \q_stop
+          }
       }
   }
-\cs_new_protected:Npn \@@_property_find:w #1 . #2 \q_stop
+\cs_new_protected:Npn \@@_property_search:w #1 . #2 \q_stop
   {
-    \tl_set:Nx \l_keys_path_tl
+    \str_if_eq:nnTF {#2} { . }
       {
-        \l_keys_path_tl
-        \@@_remove_spaces:n {#1}
+        \tl_set:Nx \l_keys_path_tl { \l_keys_path_tl }
+        \tl_set:Nn \l_@@_property_tl { . #1 }
       }
-    \tl_if_in:nnTF {#2} { . }
       {
-        \tl_set:Nx \l_keys_path_tl { \l_keys_path_tl . }
-        \@@_property_find:w #2 \q_stop
+        \tl_set:Nx \l_keys_path_tl { \l_keys_path_tl . #1 }
+        \@@_property_search:w #2 \q_stop
       }
-      { \tl_set:Nn \l_@@_property_tl { . #2 } }
   }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_define_key:n}
-% \begin{macro}[aux]{\@@_define_key:w}
+% \begin{macro}[int]{\@@_define_code:n}
+% \begin{macro}[aux, EXP]{\@@_define_code:w}
 %   Two possible cases. If there is a value for the key, then just use
 %   the function. If not, then a check to make sure there is no need for
 %   a value with the property. If there should be one then complain,
 %   otherwise execute it. There is no need to check for a |:| as if it
 %   is missing the earlier tests will have failed.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_define_key:n #1
+\cs_new_protected:Npn \@@_define_code:n #1
   {
     \bool_if:NTF \l_@@_no_value_bool
       {
-        \exp_after:wN \@@_define_key:w
+        \exp_after:wN \@@_define_code:w
           \l_@@_property_tl \q_stop
           { \use:c { \c_@@_props_root_tl \l_@@_property_tl } }
           {
@@ -1342,7 +1354,11 @@
       }
       { \use:c { \c_@@_props_root_tl \l_@@_property_tl } {#1} }
   }
-\cs_new_protected:Npn \@@_define_key:w #1 : #2 \q_stop
+\use:x
+  {
+    \cs_new:Npn \exp_not:N \__keys_define_code:w
+      ##1 \c_colon_str ##2 \exp_not:N \q_stop
+  }
   { \tl_if_empty:nTF {#2} }
 %    \end{macrocode}
 % \end{macro}
