Some minor naming cleanup

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1967,7 +1967,7 @@
 \cs_new_protected:Npn \@@_set:nnn #1#2#3
   {
     \tl_set:Nx \l_@@_module_tl { \@@_remove_spaces:n {#2} }
-    \keyval_parse:NNn \@@_set_elt:n \@@_set_elt:nn {#3}
+    \keyval_parse:NNn \@@_set:n \@@_set:nn {#3}
     \tl_set:Nn \l_@@_module_tl {#1}
   }
 \cs_generate_variant:Nn \keys_set:nn { nV , nv , no }
@@ -2071,24 +2071,24 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_set_elt:n, \@@_set_elt:nn}
-% \begin{macro}[aux]{\@@_set_elt_aux:nnn, \@@_set_elt_aux:onn}
+% \begin{macro}[int]{\@@_set:n, \@@_set:nn}
+% \begin{macro}[aux]{\@@_set_aux:nnn, \@@_set_aux:onn}
 % \begin{macro}[aux]{\@@_find_key_module:w}
-% \begin{macro}[aux]{\@@_set_elt_aux:, \@@_set_elt_selective:}
+% \begin{macro}[aux]{\@@_set_aux:, \@@_set_selective:}
 %   A shared system once again. First, set the current path and add a
 %   default if needed. There are then checks to see if the a value is
 %   required or forbidden. If everything passes, move on to execute the
 %   code.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_set_elt:n #1
+\cs_new_protected:Npn \@@_set:n #1
   {
     \bool_set_true:N \l_@@_no_value_bool
-    \@@_set_elt_aux:onn \l_@@_module_tl {#1} { }
+    \@@_set_aux:onn \l_@@_module_tl {#1} { }
   }
-\cs_new_protected:Npn \@@_set_elt:nn #1#2
+\cs_new_protected:Npn \@@_set:nn #1#2
   {
     \bool_set_false:N \l_@@_no_value_bool
-    \@@_set_elt_aux:onn \l_@@_module_tl {#1} {#2}
+    \@@_set_aux:onn \l_@@_module_tl {#1} {#2}
   }
 %    \end{macrocode}
 %   The key path here can be fully defined, after which there is a search
@@ -2097,18 +2097,18 @@
 %   that happens on a per-key basis, we use the stack approach to restore
 %   the module name without a group.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_set_elt_aux:nnn #1#2#3
+\cs_new_protected:Npn \@@_set_aux:nnn #1#2#3
   {
     \tl_set:Nx \l_keys_path_tl { #1 / \@@_remove_spaces:n {#2} }
     \tl_clear:N \l_@@_module_tl
     \exp_after:wN \@@_find_key_module:w \l_keys_path_tl / \q_stop
     \@@_value_or_default:n {#3}
     \bool_if:NTF \l_@@_selective_bool
-      { \@@_set_elt_selective: }
-      { \@@_set_elt_aux: }
+      { \@@_set_selective: }
+      { \@@_set_aux: }
     \tl_set:Nn \l_@@_module_tl {#1}
   }
-\cs_generate_variant:Nn \@@_set_elt_aux:nnn { o }
+\cs_generate_variant:Nn \@@_set_aux:nnn { o }
 \cs_new_protected:Npn \@@_find_key_module:w #1 / #2 \q_stop
   {
     \tl_if_blank:nTF {#2}
@@ -2122,7 +2122,7 @@
         \@@_find_key_module:w #2 \q_stop
       }
   }
-\cs_new_protected:Npn \@@_set_elt_aux:
+\cs_new_protected:Npn \@@_set_aux:
   {
     \bool_if:nTF
       {
@@ -2152,7 +2152,7 @@
 %  have any groups assigned. There is then the question of whether the
 %  selection is opt-in or opt-out.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_set_elt_selective:
+\cs_new_protected:Npn \@@_set_selective:
   {
     \prop_if_exist:cTF { \c_@@_info_root_tl \l_keys_path_tl }
       {
@@ -2161,13 +2161,13 @@
           { \@@_check_groups: }
           {
             \bool_if:NTF \l_@@_filtered_bool
-              { \@@_set_elt_aux: }
+              { \@@_set_aux: }
               { \@@_store_unused: }
           }
       }
       {
         \bool_if:NTF \l_@@_filtered_bool
-          { \@@_set_elt_aux: }
+          { \@@_set_aux: }
           { \@@_store_unused: }
       }
   }
@@ -2195,11 +2195,11 @@
       {
         \bool_if:NTF \l_@@_filtered_bool
           { \@@_store_unused: }
-          { \@@_set_elt_aux: }
+          { \@@_set_aux: }
       }
       {
         \bool_if:NTF \l_@@_filtered_bool
-          { \@@_set_elt_aux: }
+          { \@@_set_aux: }
           { \@@_store_unused: }
       }
   }
@@ -2230,7 +2230,7 @@
 %   To test if a value is required or forbidden. A simple check for
 %   the existence of the appropriate marker.
 %    \begin{macrocode}
-\prg_new_conditional:Npnn \@@_if_value:n #1 { p }
+\prg_new_conditional:Npnn \@@_if_value:n #1 { p , T, TF, F }
   {
     \prop_if_exist:cTF { \c_@@_info_root_tl \l_keys_path_tl }
       {
