More efficient initialisation of keys
As there's only one csname to look at, it's a bit silly to do
all of that complex set up.

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1597,20 +1597,13 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_initialise:n}
-% \begin{macro}[aux]{\@@_initialise:wn}
-%   A set up for initialisation from which the key system requires that
-%   the path is split up into a module and a key name. At this stage,
-%   \cs{l_keys_path_tl} will contain \texttt{/} so a split is easy to do.
+%   A set up for initialisation: just run the code if it exists.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_initialise:n #1
   {
-    \@@_ensure_exist:V \l_keys_path_tl
-    \exp_after:wN \@@_initialise:wn \l_keys_path_tl \q_stop {#1}
+    \cs_if_exist_use:cT { \c_@@_code_root_tl \l_keys_path_tl } { {#1} }
   }
-\cs_new_protected:Npn \@@_initialise:wn #1 / #2 \q_stop #3
-  { \keys_set:nn {#1} { #2 = {#3} } }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_meta_make:n}
