--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -1,4 +1,4 @@
-% Copyright 2014 The LaTeX3 Project
+% Copyright 2016 The LaTeX3 Project
 \documentclass{ltnews}
 
 \PassOptionsToPackage{colorlinks}{hyperref}
@@ -16,7 +16,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\publicationmonth{September}
+\publicationmonth{October}
 \publicationyear{2016}
 \publicationissue{10}
 
@@ -43,32 +43,41 @@ Lua. The team have used this to create a new general testing system for \TeX{}
 code, \pkg{l3build}. This \emph{is} designed to be used beyond the team, so is
 now available in \TeX{} Live and \hologo{MiKTeX} and is fully documented.
 Testing using \pkg{l3build} makes use of a normalised version of the
-\texttt{.log} file, so can test any aspect of \TeX{} output (using
-\cs{showbox}).
+\texttt{.log} file, so can test any aspect of \TeX{} output (e.g., by using
+\cs{showbox}) or its algorithms (by displaying results in the \texttt{.log}).
 
 Part of the remit for creating \pkg{l3build} was to enable the team to work
 truly cross-platform and to allow testing using multiple \TeX{} engines
 (earlier systems were limited to a single engine, normally \eTeX{}). The new
 testing system means we are in a much stronger position to support a variety of
 engines (see below). It has also enabled us to give useful feedback to the
-\hologo{LuaTeX} team as they develop it further.
+\hologo{LuaTeX} team as they develop
+%%it  -- which it? :-)
+the \hologo{LuaTeX} engine
+further.
 
 As well as the core capability in testing, \pkg{l3build} also provides a
 \enquote{one stop} script for creating release bundles. The script is
 sufficiently flexible that for many common \LaTeX{} package structures, setting
 up for creating releases will require only a few lines of configuration.
 
+In addition to the documentation distributed with \pkg{l3build} the project
+website~\cite[publications in 2014]{project-publications} contains
+some articles, videos and conference presentations that explain how to
+use \pkg{l3build} to manage and test any type of (\LaTeX{}) package.
+
 \section{Automating \pkg{expl3} testing}
 
-As well developing \pkg{l3build} for local use, the team have also set up
-integration testing for \pkg{expl3} using the Travis-CI system. This means that
-\emph{every} commit to the \LaTeX3 code base now results in a full set of tests
-being run. This has allowed us to significantly reduce the number of occasions
-where \pkg{expl3} needs attention before being released to CTAN.
+As well developing \pkg{l3build} for local use, the team have also set
+up integration testing for \pkg{expl3} using the Travis-CI
+system. This means that \emph{every} commit to the \LaTeX3 code base
+now results in a full set of tests being run. This has allowed us to
+significantly reduce the number of occasions where \pkg{expl3} needs
+attention before being released to CTAN.
 
-Automated testing has also enabled us to check that \pkg{expl3} updates do not
-break a number of key third-party packages which use the programming
-environment.
+Automated testing has also enabled us to check that \pkg{expl3}
+updates do not break a number of key third-party packages which use
+the programming environment.
 
 \section{Refining \pkg{expl3}}
 
@@ -85,10 +94,14 @@ of this process, the \enquote{low-level} part of \pkg{expl3}, which saves all
 primitives, now covers essentially all primitives found in all of these
 engines.
 
-The code in \pkg{expl3} is now entirely self-contained, loading no other
-third-party packages, and can also be loaded as a generic package with plain
-\TeX{}, \emph{etc.} These changes make it much easier to diagnose problems and
-make \pkg{expl3} more useful.
+The code in \pkg{expl3} is now entirely self-contained, loading no
+other third-party packages, and can also be loaded as a generic
+package with plain \TeX{}, \emph{etc.} These changes make it much
+easier to diagnose problems and make \pkg{expl3} more useful.
+%
+In particular it can be used as a programming language for generic
+packages, that then can run without modifications under different
+formats!
 
 The team have made a range of small refinements to both internals and
 \pkg{expl3} interfaces. Internal self-consistency has also been improved, for
@@ -161,7 +174,55 @@ There are additional elements to consider here, for example whether lines are
 the best way to model the length of shaping, how to handle headings, cut-outs
 at page breaks, \emph{etc.}
 
+
+\section{Globally optimized pagination of documents}
+
+Throughout 2016 Frank Mittelbach worked on methods and algorithms for
+globally optimizing the pagination of documents including those that
+contain floats. Early research results have been presented at Bacho\TeX{}
+2016, TUG 2016 in Toronto and later in the year at \mbox{DocEng'16}, the ACM
+Symposium on Document Engineering in Vienna. A link to the ACM paper
+(that allows a download free of charge) can be found on the project
+website~\cite{project-publications}. The site also holds the speaker
+notes from Toronto and will host a link to a video of the
+presentation once it becomes available.
+
+The framework developed by Frank is based on the extended
+functionality provided by \hologo{LuaTeX} in particular its callback
+functions that allow interacting with the typesetting process at
+various points. The algorithm that determines the optimal pagination
+of a given document is implemented in {Lua} and its results are then
+used to direct the formatting done by the \TeX{} engine.
+
+At the current point in time this a working prototype but not yet
+anywhere near a production-ready system. However, the work so far
+shows a great potential and Frank is fairly confident that it will
+eventually become a generally usable solution.
+
 \section{Looking forward}
+
+- luatex 1.0 is the promise for a stable luatex engine and may well
+result in luatex eventually replacing the pdf engine as the default
+distribution engine
+
+- if that happens we expect to implement some of the more complex
+functionality (such as complex pagination requirements and models)
+only for luatex
+
+- else?
+
+  \begin{thebibliography}{10}
+
+    \raggedright
+
+    
+\bibitem{project-publications}
+Links to various publications by members of the \LaTeX{} Project Team.
+\newblock \url{https://www.latex-project.org/publications}.
+
+\end{thebibliography}
+
+
 
 \end{document}
 
