--- a/news/l3news10.tex
+++ b/news/l3news10.tex
@@ -50,11 +50,8 @@ Part of the remit for creating \pkg{l3build} was to enable the team to work
 truly cross-platform and to allow testing using multiple \TeX{} engines
 (earlier systems were limited to a single engine, normally \eTeX{}). The new
 testing system means we are in a much stronger position to support a variety of
-engines (see below). It has also enabled us to give useful feedback to the
-\hologo{LuaTeX} team as they develop
-%%it  -- which it? :-)
-the \hologo{LuaTeX} engine
-further.
+engines (see below). It has also enabled us to give useful feedback on
+development of the \hologo{LuaTeX} engine.
 
 As well as the core capability in testing, \pkg{l3build} also provides a
 \enquote{one stop} script for creating release bundles. The script is
@@ -201,25 +198,21 @@ eventually become a generally usable solution.
 
 \section{Looking forward}
 
-- luatex 1.0 is the promise for a stable luatex engine and may well
-result in luatex eventually replacing the pdf engine as the default
-distribution engine
+\begin{itemize}
+  \item \hologo{LuaTeX} 1.0 is the promise for a stable \hologo{LuaTeX} engine
+    and may well result in \hologo{LuaTeX} eventually replacing \hologo{pdfTeX}
+    default distribution engine.
+  \item If that happens we expect to implement some of the more complex
+    functionality (such as complex pagination requirements and models) only for
+    \hologo{LuaTeX}.
+  \item else?
+\end{itemize}
 
-- if that happens we expect to implement some of the more complex
-functionality (such as complex pagination requirements and models)
-only for luatex
-
-- else?
-
-  \begin{thebibliography}{10}
-
-    \raggedright
-
-    
-\bibitem{project-publications}
-Links to various publications by members of the \LaTeX{} Project Team.
-\newblock \url{https://www.latex-project.org/publications}.
-
+\begin{thebibliography}{10}
+  \raggedright
+  \bibitem{project-publications}
+    Links to various publications by members of the \LaTeX{} Project Team.
+    \newblock \url{https://www.latex-project.org/publications}.
 \end{thebibliography}
 
 
